<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- ID de la commande -->
        <TextView
            android:id="@+id/textViewCommandeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commande_01"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <!-- Date de la commande -->
        <TextView
            android:id="@+id/textViewCommandeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_01_01_2024_10_30"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="8dp" />

        <!-- Total de la commande -->
        <TextView
            android:id="@+id/textViewCommandeTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_0_00_dt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/primary" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>